--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ h1 {
 .showcase {
 	width: 100%;
 	height: 400px;
-	background: url('images/hero.jpg') no-repeat center center/cover;
+	background: url('Images/hero.jpg') no-repeat center center/cover;
 	margin-bottom: 30px;
 }
 
